main.css
@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,900);
@import url(https://fonts.googleapis.com/css?family=Bonbon);

html, body, div, header, nav, ul, li, section, img, h1, h2, h3, h4, p, a, input {
  margin: 0;
  border: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  letter-spacing: 1px;
  font-family: raleway, sans-serif;
  font-weight: 300;
}

blockquote:before {
  color: black;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote:after {
  color: black;
  content: close-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote {
  border-left: 10px solid #FFEA00;
  border-right: 10px solid #FFEA00;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
  line-height: 1.7em;
}

/**********************************************
NAVIGATION and NAVIGATION LINKS
***********************************************/
input[type=checkbox]{
  display:none;
}

nav {
  width: 100%;
  font-size: 1rem;
  background-color: #FFE800;
  font-variant:small-caps;
  position: fixed;
  /*z-index: 1;*/
  /*background-color: green;*/
}

nav#whole-nav {
  display: block; /* from Robin's code */
}

ul {
  list-style: none;
}

ul#brand-and-icon {
  display: flex;
  flex-direction: row;
  align-items: center;
  border-bottom: 1px solid #F1DB00;
  height: 40px;
  /*background-color: cyan;*/
}

ul#brand-and-icon img {
  width: 1.8rem;
}

div#nav-links a {
  padding: 5px;
  width: 100%;
  height: 40px;
  font-size: 1.2rem;
  border-bottom: 1px solid #F1DB00;
  color: black;
}

div#nav-links a:hover {
  background-color: #F2DD00;
  cursor: pointer;
  font-weight: 600;
}

div#nav-links a:active {
  background-color: #FFF457;
  font-weight: 600;
  border: none;
  color: black;
}

nav a, a:hover, a:active {
  text-decoration: none;
  color: black;
}

/**********************************************
IMAGES
***********************************************/

img#me {
  max-width: 200px;
  border-radius: 100%;
  margin-bottom: 15px;
  border: 2px solid black;
}

img#heart {
  width: 15px;
}

img#resume {
  max-width: 33%;
}

img.project {
  max-width: 100%;
  margin: .5rem 0;
}

/**********************************************
HEADINGS
***********************************************/

/* Used for brand logo */
h1 {
  font-family: Bonbon, cursive;
  font-size: 1.5rem;
  margin: .5rem;
  font-weight: 500;
  letter-spacing: .2rem;
  /*background-color: orange;*/
}

h1:hover {
  font-weight: 700;
  cursor: pointer;
}

/* Used for nav links */
h2 {
  font-size: 1rem;
  letter-spacing: 1px;
  font-family: raleway, sans-serif;
  font-weight: 400;
}

/* Used for blurb */
h3 {
  font-size: 1rem;
  letter-spacing: 1px;
  max-width: 60%;
  margin: 0 auto;
  padding-bottom: 1rem;
  font-weight: 500;
}

/* Used for brand statement, which is hidden in mobile */
h4.blurb {
  display: none;
  /*border: 3px solid orange;*/
}

/* Used for subtitles */
h5, section#resume h5 {
  margin: 1rem;
  font-size: 1.5rem;
  font-weight: 600;
  letter-spacing: .2rem;
  text-align: center;
  color: #00BD9D;
}

section#projects h5 {
  color: #FA8C3A;
}

/* Used for project descriptions */
.project-small {
  font-size: .7rem;
}

/**********************************************
LINKS
***********************************************/
a:link, a:active, a:visited {
  color: #2E79B9;
}

a.section-link, p a {
  font-weight: 600;
}

a.section-link:hover, p a:hover {
  color: #00BE9D;
}

/**********************************************
SECTIONS AND PARAGRAPHS
***********************************************/
section {
  text-align: center;
}

section.image-blurbs {
  max-width: 100%;
  padding-top: 60px;
  background-color: #FFF13D;
}

.scrolled {
  transition:max-height 0.1s;
  -webkit-transition:max-height 0.1s;
  max-height: 0;
}

section.moved {
  padding-top: 170px;
}

section.section-info {
  margin: 1rem;
}

section#about-me,
section#projects {
  padding-bottom: 1rem;
  border-bottom: 2px solid #F4F4F4;
}

p {
  margin-bottom: 1rem;
  font-size: .8rem;
}

footer {
  max-width: 100%;
  height: 50px;
  background-color: #FFE800;
  display: flex;
  align-items: center;
}

footer p {
  font-size: .7rem;
  margin: .8rem;
}
/**********************************************
CONTAINERS AND DIVS
***********************************************/
div.row {
  text-align: center;
}

div.image-blurbs {
  width: 100%;
  text-align: center;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  /*border: 5px solid blue;*/
}

div.blurb {
  max-width: 50%;
  align-self: center;
  display: none;
}

div.row.technologies {
  display: flex;
  flex-direction: column;
  align-items: center;
}

div#me {
  max-width: 100%;
  margin: 0 auto;
  /*border: 5px solid red;*/
}

div.all-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}

div.project-image {
  text-align: center;
  width: 100%;
  height: 150px;
  overflow: hidden;
}

div.project-image img {
  height: 150px;
}

div.card-wrapper {
  max-width: 30%;
  min-width: 250px;
  padding: 1rem;
  margin: 1rem;
  border: 1px solid #CBC9C9;
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  align-items: stretch;
  align-content: stretch;
}

div.description-container {
  max-width: 100%;
  display: flex;
  flex-direction: column-reverse;
  align-contents: space-around;
  align-items: stretch;
  flex-grow: 2;
  /*margin-top: .2rem;*/
}

div.languages {
  margin-bottom: auto;
  padding-top: .5rem;
  margin-top: .8rem;git st
}

div.description, div.languages {
  max-width: 100%;
  padding: .2rem;
}

/**********************************************
LISTS
***********************************************/

ul#technologies {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

ul#technologies li {
  font-weight: 200;
  color: white;
  width: 100px;
  margin: .1rem;
  text-align: center;
}

div.languages li {
  list-style: square;
  list-style-position: inside;
}

/**********************************************
FONT SIZES
***********************************************/

ul#technologies li {
  font-size: .8rem;
  list-style-type: square;
  list-style-position: inside;
  text-align: center;
}

/**********************************************
COLOR SCHEME
***********************************************/
div.box:nth-child(1) {
  width: 50px;
  height: 50px;
  background-color: HSL(24, 92%, 62%);
  margin: 10px;
}

div.box:nth-child(2) {
  width: 50px;
  height: 50px;
  background-color: HSL(53, 100%, 50%);
  margin: 10px;
}

div.box:nth-child(3) {
  width: 50px;
  height: 50px;
  background-color: turquoise;
  margin: 10px;
}

/*************************************/
/* WHEN THE SCREEN IS LARGE: > 600px */
/*************************************/

@media (min-width: 601px) {

  nav#whole-nav {
    display:flex;
    display:-webkit-flex;
    flex-direction:row;
    -webkit-flex-direction:row;
    /*-webkit-justify-content:space-between;*/
    align-items: center;
  }

  ul#brand-and-icon {
    border: none;
  }

  div#nav-links a {
    border: none;
  }

  nav a {
    margin-right: 20px;
  }

  a.resume {
    margin-right: auto;
  }

  div.blurb , blockquote, blockquote:before {
    display: inline-block;
  }

  div#me {
    margin: 0;
  }

  h4.blurb {
    display: inline-block;
    font-weight: 500;
  }

  label#menu-icon {
    display: none;
  }

  img#me {
    width: 150px;
  }

  h3#blurb {
  font-size: .8rem;
  }

} /* ends @media */


/*************************************/
/* WHEN THE SCREEN IS SMALL: < 601px */
/*************************************/

@media (max-width: 600px) {

  nav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /*align-items: center;*/
  }

  div#nav-links {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #toggle + div#nav-links {
    overflow:hidden;
    transition:max-height 0.1s;
    -webkit-transition:max-height 0.1s;
    max-height:0px;
  }

  #toggle:checked + div#nav-links {
    max-height:200px;
  }

  .scootDown {
    margin-top:120px;
  }

  ul li.icon {
    margin-right: auto;
  }

  nav a {
    text-align: center;
  }

}

